--- a/src/styles/VideoPlayer.sass
+++ b/src/styles/VideoPlayer.sass
@@ -11,10 +11,10 @@
 	-webkit-transform: scale(.9) translateY(0); /* Chrome, Safari, Opera */
 	transform: scale(.9) translateY(0);
 
-	-webkit-transition: opacity .4s ease-in-out, transform .4s ease-in-out;
-	-moz-transition: opacity .4s ease-in-out, transform .4s ease-in-out;
+	-webkit-transition: opacity .4s ease-in-out, -webkit-transform .4s ease-in-out;
+	-moz-transition: opacity .4s ease-in-out, -moz-transform .4s ease-in-out;
 	-ms-transition: opacity .4s ease-in-out, transform .4s ease-in-out;
-	-o-transition: opacity .4s ease-in-out, transform .4s ease-in-out;
+	-o-transition: opacity .4s ease-in-out, -o-transform .4s ease-in-out;
 	transition: opacity .4s ease-in-out, transform .4s ease-in-out;
 }
 
